--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ googlewebfonts: family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;
 permalink: pretty
 
 # local
-url: "http://localhost:4000" # 
+url: "https://c0ld21.github.io" # 
 baseurl: "" # 
 
 
